--- a/templatedjango/apptemplate/templates/nombre_productos/nombre_productos.html
+++ b/templatedjango/apptemplate/templates/nombre_productos/nombre_productos.html
@@ -170,7 +170,7 @@
                                                 <label for="recipient-name" class="col-form-label">Nombre del
                                                     Producto:</label>
                                                 <input name="nombre" value="{{mostrar.nombre_productos}}" type="text"
-                                                    class="form-control" id="recipient-name">
+                                                    class="form-control" id="recipient-name" required>
                                             </div>
 
 
