--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -132,7 +132,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="inicio">Inicio <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="home">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="logout" onclick="confirmar_logout()">Cerrar Sesion</a>
